Added more information to readme
